--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 }
 </script>
 </head>
-  <body class="bg-[#1A1C1E]">
+  <body class="bg-[#1B1B1F]">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
